fix: return empty dependencies array for SaaS subscription
- Changed getDependencies() to return empty list
- XSUAA is automatically handled as bound service
- Previous response with xsappname may have caused subscription failure